--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,26 +10,82 @@ book:
   downloads: [pdf]
   chapters:
     - index.qmd
-    - intro.qmd
-    - 02_simplereg.qmd
-    - 11_asympls.qmd
-    - 21_asympqr.qmd
+    - part: "Intro"
+      chapters:
+        - intro.qmd
+    - part: "Simple Linear Regression"
+      chapters:
+        - simplereg.qmd
+    - part: "Nonlinear and Nonparametric Models"
+      chapters: 
+        - boosting.qmd
+        - kernelreg.qmd
+    - part: "Robust and Quantile Regression"
+      chapters: 
+        - robustreg.qmd
+        - quantreg.qmd
+    - part: "Linear Model Asymptotics"
+      chapters:
+        - asympls.qmd
+        - asympqr.qmd
+    - part: "Advanced Topics"
+      chapters:
+        - slm.qmd
+        - gp.qmd
+        - pca.qmd
     - summary.qmd
     - references.qmd
 
 bibliography: references.bib
 
+filters:
+  - pseudocode
+
 format:
   html:
     theme: cosmo
+    code-fold: true
+    include-in-header:
+      text: |
+        <script>
+        MathJax = {
+          loader: {
+            load: ['[tex]/boldsymbol']
+          },
+          tex: {
+            tags: "all",
+            inlineMath: [['$','$'], ['\\(','\\)']],
+            displayMath: [['$$','$$'], ['\\[','\\]']],
+            processEscapes: true,
+            processEnvironments: true,
+            packages: {
+              '[+]': ['boldsymbol']
+            }
+          }
+        };
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
   pdf:
     documentclass: scrreprt
     mainfont: "Noto Sans KR"
     filters:
       - watermark
-    include-in-header: 
-      - text: |
-          \usepackage{kotex}
-
+    watermark:
+      text: "Seoncheol Park"
+    include-in-header: preamble.tex
+    include-before-body:
+      text: |
+        \renewcommand{\Return}{\State \textbf{return}~}
+        \newcommand{\Print}{\State \textbf{print}~}
+        \newcommand{\Break}{\State \textbf{break}}
+        \newcommand{\Continue}{\State \textbf{continue}}
+        \newcommand{\True}{\textbf{true}}
+        \newcommand{\False}{\textbf{false}}
+        \renewcommand{\And}{\textbf{and}~}
+        \newcommand{\Or}{\textbf{or}~}
+        \renewcommand{\Not}{\textbf{not}~}
+        \newcommand{\To}{\textbf{to}~}
+        \newcommand{\DownTo}{\textbf{downto}~}
+        
 editor: visual
 
